--- a/dotNet5782_0545_8228/PL/CustomerViewWindow.xaml
+++ b/dotNet5782_0545_8228/PL/CustomerViewWindow.xaml
@@ -85,7 +85,7 @@
             </Border>
 
 
-            <ListView Name="SentPackageList" ItemsSource="{Binding}" Visibility="Hidden" Grid.Column="1" HorizontalAlignment="Center" Height="219" Width="292" Margin="0,352,0,0" VerticalAlignment="Top" MouseDoubleClick="SentPackageList_MouseDoubleClick">
+            <ListView Name="SentPackageList" Background="{StaticResource WindowBrush}" ItemContainerStyle="{StaticResource CustomListViewItem}" ItemsSource="{Binding}" Visibility="Hidden" Grid.Column="1" HorizontalAlignment="Center" Height="219" Width="292" Margin="0,352,0,0" VerticalAlignment="Top" MouseDoubleClick="SentPackageList_MouseDoubleClick">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Package #" DisplayMemberBinding="{Binding Path=ID}"/>
@@ -95,7 +95,7 @@
                     </GridView>
                 </ListView.View>
             </ListView>
-            <ListView Name="ReceivedPackageList" ItemsSource="{Binding}" Visibility="Hidden" Grid.Column="1"  HorizontalAlignment="Center" Height="231" Width="292" Margin="0,58,0,0" VerticalAlignment="Top" MouseDoubleClick="ReceivedPackageList_MouseDoubleClick">
+            <ListView Name="ReceivedPackageList" Background="{StaticResource WindowBrush}" ItemContainerStyle="{StaticResource CustomListViewItem}" ItemsSource="{Binding}" Visibility="Hidden" Grid.Column="1"  HorizontalAlignment="Center" Height="231" Width="292" Margin="0,58,0,0" VerticalAlignment="Top" MouseDoubleClick="ReceivedPackageList_MouseDoubleClick">
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Package #" DisplayMemberBinding="{Binding Path=ID}"/>
